DTS-48150: kpi related changes